--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # Site settings
-title: Patrick Hanus - Web Developer
+title: Patrick Hanus - Developer & Designer
 description: "A blog about lorem ipsum ..."
 baseurl: "" # for test: remove string '/space-jekyll-templa' to ''
-url: "http://victorvoid.github.io/space-jekyll-template/" # for test: remove string 'http://victorvoid.github.io' to '' but in production: 'https://yourusername.githu.io'
+url: "" # for test: remove string 'http://victorvoid.github.io' to '' but in production: 'https://yourusername.githu.io'
 cover: "/assets/cover.png"
 logo: "/assets/logo.png"
 
@@ -36,7 +36,7 @@ links:
     url: /projects
   - title: Tags
     url: /Tags
-  - title: About Me
+  - title: About
     url: /about
 
 # projects in header index
