--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ compress_html:
 #    style: compressed
 
 exclude: [README.md, CHANGELOG.md]
-include: ["_pages"]
+include: ["_pages", "_projects"]
 permalink: /:title/
 
 # Links to include in menu navigation
@@ -35,22 +35,26 @@ links:
   - title: Home
     url: /
   - title: Resume
-    url: /resume/
+    url: /resume
   - title: Lists
-    url: /lists/
+    url: /lists
   - title: Blog
-    url: /blog/
+    url: /blog
   - title: Projects
-    url: /projects/
+    url: /projects
   - title: About
-    url: /about/
+    url: /about
 
 # projects in header index
 projects:
   - name: Skymouse Studios
-    url: /skymouse/
+    url: /skymouse
   - name: RESOURCE Commercial Real Estate
-    url: /resource/
+    url: /resource
+  - name: Other People's Lives
+    url: /resource
+  - name: Man The Movie
+    url: /man-the-movie
 
 # Links to Social Media
 social: 
