--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ logo: "/assets/logo.png"
 
 # User settings
 username: Patrick Hanus
-user_title: Patrick Hanus | Creative Director
+user_title: Patrick Hanus | Designer & Developer
 email: patrick@skymse.com
 twitter_username: "@thehsedition"
 github_username:  "@thehsedition"
